js/src/tests/test262/language/expressions/class/elements/syntax/early-errors/invalid-names/method-member-expression-this.js
DONOTEVALUATE
(
)
;
var
C
=
class
{
m
(
)
{
this
.
#
x
}
}
;
